@@ -1,5 +1,9 @@
-package com.foodtruck.security;
+package com.foodtruck.config;
 
+import com.foodtruck.security.AuthTokenFilter;
+import com.foodtruck.security.CustomOAuth2UserService;
+import com.foodtruck.security.HttpCookieOAuth2AuthorizationRequestRepository; // <--- O ARQUIVO NOVO QUE CRIAMOS
+import com.foodtruck.security.OAuth2SuccessHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -15,12 +19,13 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher; // <--- ADICIONE ESTE IMPORT
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity(prePostEnabled = true)
@@ -30,6 +35,9 @@ public class WebSecurityConfig {
     private final AuthTokenFilter authTokenFilter;
     private final CustomOAuth2UserService customOAuth2UserService;
     private final OAuth2SuccessHandler oAuth2SuccessHandler;
+    
+    // --- INJEÇÃO DA PEÇA CHAVE (Para funcionar no Mobile) ---
+    private final HttpCookieOAuth2AuthorizationRequestRepository cookieAuthorizationRequestRepository;
 
     @Bean
     public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
@@ -42,8 +50,8 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         var cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000","http://localhost:8081","http://localhost:19006"));
+        // Liberando GERAL para evitar dor de cabeça no mobile (ajuste depois se quiser)
+        cfg.setAllowedOriginPatterns(List.of("*")); 
         cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS","PATCH"));
         cfg.setAllowedHeaders(Arrays.asList("*"));
         cfg.setAllowCredentials(true);
@@ -59,33 +67,37 @@ public class WebSecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             
-            // --- CORREÇÃO DEFINITIVA AQUI ---
+            // Tratamento de erro 401 sem redirecionar para HTML (Sua configuração original)
             .exceptionHandling(e -> e
-                // Define que APENAS para rotas "/api/**", o erro será 401 (sem redirect)
                 .defaultAuthenticationEntryPointFor(
                     new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED),
                     new AntPathRequestMatcher("/api/**")
                 )
             )
-            // --------------------------------
 
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/swagger","/swagger/**","/swagger-ui.html","/swagger-ui/**",
-                                 "/v3/api-docs","/v3/api-docs/**","/v3/api-docs.yaml").permitAll()
-                .requestMatchers(HttpMethod.POST, "/api/auth/register", "/api/auth/login").permitAll()
-
-                .requestMatchers("/oauth2/**", "/login/**", "/login/oauth2/**").permitAll()
+                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/auth/**").permitAll()
+                .requestMatchers("/oauth2/**", "/login/**").permitAll()
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                .requestMatchers("/h2-console/**", "/api/test/all").permitAll()
-                .requestMatchers("/api/test/admin").hasRole("ADMIN")
-                .requestMatchers("/api/test/user").hasAnyRole("USER","ADMIN")
+                .requestMatchers("/error").permitAll()
                 .anyRequest().authenticated()
             )
-            .headers(h -> h.frameOptions(f -> f.disable()))
-
-            .oauth2Login(o -> o
-                .userInfoEndpoint(u -> u.userService(customOAuth2UserService))
+            
+            .oauth2Login(oauth2 -> oauth2
+                // --- AQUI ESTÁ A ÚNICA MUDANÇA REAL ---
+                // Diz pro Spring: "Guarde o estado (redirect_uri) no Cookie, e não na sessão"
+                .authorizationEndpoint(authorization -> authorization
+                    .baseUri("/oauth2/authorization")
+                    .authorizationRequestRepository(cookieAuthorizationRequestRepository)
+                )
+                .redirectionEndpoint(redirection -> redirection
+                    .baseUri("/login/oauth2/code/*")
+                )
+                // ---------------------------------------
+                .userInfoEndpoint(userInfo -> userInfo
+                    .userService(customOAuth2UserService)
+                )
                 .successHandler(oAuth2SuccessHandler)
             );
 
